welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:15: error: ')' expected but 'else' found.
  else {
  ^